--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "secrets"]
 	path = secrets
-	url = https://github.com/shuuri-labs/shuurinet-nix-secrets
+	url = git@github.com:shuuri-labs/shuurinet-nix-secrets.git
