caddy module finished

--- a/hosts/ludicolo/frigate/config.yml
+++ b/hosts/ludicolo/frigate/config.yml
@@ -111,3 +111,6 @@ model:
   input_pixel_format: bgr
   labelmap_path: /openvino-model/coco_91cl_bkgr.txt
 version: 0.15-1
+
+tls:
+  enabled: False
